--- a/res/layout/sync_account.xml
+++ b/res/layout/sync_account.xml
@@ -39,6 +39,10 @@
 	  <EditText android:id="@+id/keyInput"
 	    style="@style/SyncEditItem"
 	    android:hint="@string/sync_input_key" />
+
+	  <TextView android:id="@+id/cred_error"
+	    style="@style/SyncTextError"
+	    android:text="@string/sync_invalidcreds_label" />
 	
 	  <CheckBox android:id="@+id/checkbox_server"
 	    android:layout_width="wrap_content"
@@ -51,6 +55,10 @@
 	    style="@style/SyncEditItem"
 	    android:visibility="gone"
 	    android:hint="@string/sync_input_server" />
+
+	  <TextView android:id="@+id/server_error"
+	    style="@style/SyncTextError"
+	    android:text="@string/sync_invalidserver_label" />
 
 	</LinearLayout>
   </ScrollView>
