--- a/res/layout/sync_setup_success.xml
+++ b/res/layout/sync_setup_success.xml
@@ -33,6 +33,6 @@
     <Button
       style="@style/SyncButton"
       android:onClick="launchBrowser"
-      android:text="@string/brand_shortName" />
+      android:text="@string/brand_short_name" />
   </LinearLayout>
 </RelativeLayout>
