--- a/res/layout/fxaccount_setup_existing_account.xml
+++ b/res/layout/fxaccount_setup_existing_account.xml
@@ -11,26 +11,46 @@
 
 		<TextView
 			style="@style/FxAccountTop"
-			android:text="Log in to Firefox account" />
+			android:text="Log in to account" />
 
-		<EditText
-			android:id="@+id/email"
-			style="@style/FxAccountEditItem"
-			android:layout_marginBottom="10dp"
-			android:ems="10"
-			android:hint="Email address"
-			android:inputType="textEmailAddress" >
+		<FrameLayout
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="20dp" >
 
-			<requestFocus />
-		</EditText>
+			<LinearLayout
+				android:layout_width="fill_parent"
+				android:layout_height="fill_parent"
+				android:orientation="vertical" >
 
-		<EditText
-			android:id="@+id/password"
-			style="@style/FxAccountEditItem"
-			android:layout_marginBottom="20dp"
-			android:ems="10"
-			android:hint="Password"
-			android:inputType="textPassword" />
+				<EditText
+					android:id="@+id/email"
+					style="@style/FxAccountEditItem"
+					android:layout_marginBottom="10dp"
+					android:ems="10"
+					android:hint="Email address"
+					android:inputType="textEmailAddress" >
+
+					<requestFocus />
+				</EditText>
+
+				<EditText
+					android:id="@+id/password"
+					style="@style/FxAccountEditItem"
+					android:layout_marginBottom="20dp"
+					android:ems="10"
+					android:hint="Password"
+					android:inputType="textPassword" />
+			</LinearLayout>
+
+			<FrameLayout
+				android:id="@+id/disabledLayer"
+				android:layout_width="fill_parent"
+				android:layout_height="fill_parent"
+				android:background="@drawable/fxaccount_disabled_layout_background"
+				android:visibility="invisible" >
+			</FrameLayout>
+		</FrameLayout>
 
 		<FrameLayout
 			android:layout_width="fill_parent"
