--- a/res/layout/fxaccount_setup_new_account.xml
+++ b/res/layout/fxaccount_setup_new_account.xml
@@ -11,54 +11,59 @@
 
 		<TextView
 			style="@style/FxAccountTop"
-			android:text="Create a Firefox account" />
-
-		<EditText
-			android:id="@+id/email"
-			style="@style/FxAccountEditItem"
-			android:layout_marginBottom="10dp"
-			android:ems="10"
-			android:hint="Email address"
-			android:inputType="textEmailAddress" >
-
-			<requestFocus />
-		</EditText>
-
-		<EditText
-			android:id="@+id/password"
-			style="@style/FxAccountEditItem"
-			android:layout_marginBottom="10dp"
-			android:ems="10"
-			android:hint="Password"
-			android:inputType="textPassword" />
-
-		<EditText
-			android:id="@+id/password2"
-			style="@style/FxAccountEditItem"
-			android:layout_marginBottom="10dp"
-			android:ems="10"
-			android:hint="Retype password"
-			android:inputType="textPassword" />
-
-		<TextView
-			style="@style/FxAccountTextItem"
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:gravity="center_horizontal"
-			android:text="We use Mozilla&apos;s safe and secure Persona ID to create your account." />
-
-		<TextView
-			style="@style/FxAccountLinkItem"
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
 			android:layout_marginBottom="20dp"
-			android:gravity="center_horizontal"
-			android:text="Learn more." />
-
+			android:text="Create new account" />
 
 		<FrameLayout
 			android:layout_width="fill_parent"
-			android:layout_height="wrap_content" >
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="20dp" >
+
+			<LinearLayout
+				android:layout_width="fill_parent"
+				android:layout_height="fill_parent"
+				android:orientation="vertical" >
+
+				<EditText
+					android:id="@+id/email"
+					style="@style/FxAccountEditItem"
+					android:layout_marginBottom="10dp"
+					android:ems="10"
+					android:hint="Email address"
+					android:inputType="textEmailAddress" >
+
+					<requestFocus />
+				</EditText>
+
+				<EditText
+					android:id="@+id/password"
+					style="@style/FxAccountEditItem"
+					android:layout_marginBottom="10dp"
+					android:ems="10"
+					android:hint="Password"
+					android:inputType="textPassword" />
+
+				<EditText
+					android:id="@+id/password2"
+					style="@style/FxAccountEditItem"
+					android:ems="10"
+					android:hint="Retype password"
+					android:inputType="textPassword" />
+			</LinearLayout>
+
+			<FrameLayout
+				android:id="@+id/disabledLayer"
+				android:layout_width="fill_parent"
+				android:layout_height="fill_parent"
+				android:background="@drawable/fxaccount_disabled_layout_background"
+				android:visibility="invisible" >
+			</FrameLayout>
+		</FrameLayout>
+
+		<FrameLayout
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="20dp" >
 
 			<Button
 				android:id="@+id/next"
@@ -83,6 +88,26 @@
 				android:layout_height="fill_parent"
 				android:visibility="invisible" />
 		</FrameLayout>
+
+		<LinearLayout
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:orientation="vertical" >
+
+			<TextView
+				style="@style/FxAccountTextItem"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:gravity="center_horizontal"
+				android:text="We use Mozilla&apos;s safe and secure Persona ID to create your account." />
+
+			<TextView
+				style="@style/FxAccountLinkItem"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:gravity="center_horizontal"
+				android:text="Learn more." />
+		</LinearLayout>
 	</LinearLayout>
 
 </ScrollView>
